# ChangeLog for media-sound/abcde
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/abcde/ChangeLog,v 1.51 2010/07/23 19:38:39 beandog Exp $

*abcde-2.4.2-r1 (23 Jul 2010)

  23 Jul 2010; Steve Dibb <beandog@gentoo.org> -abcde-2.4.2.ebuild,
  +abcde-2.4.2-r1.ebuild:
  Add atomicparsley dep for AAC tagging; bug 326171

*abcde-2.4.2 (17 Jul 2010)

  17 Jul 2010; Samuli Suominen <ssuominen@gentoo.org> +abcde-2.4.2.ebuild:
  Version bump wrt #324297 by Tim Harder.

  17 Jul 2010; Raúl Porcel <armin76@gentoo.org> abcde-2.4.1.ebuild:
  sparc stable wrt #322861

  04 Jul 2010; Samuli Suominen <ssuominen@gentoo.org> abcde-2.4.1.ebuild:
  ppc64 stable wrt #322861

  27 Jun 2010; <nixnut@gentoo.org> abcde-2.4.1.ebuild:
  ppc stable #322861

  24 Jun 2010; Pacho Ramos <pacho@gentoo.org> abcde-2.4.1.ebuild:
  stable amd64, bug 322861

  16 Jun 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> abcde-2.4.1.ebuild:
  x86 stable wrt bug #322861

*abcde-2.4.1 (24 Apr 2010)

  24 Apr 2010; Samuli Suominen <ssuominen@gentoo.org> +abcde-2.4.1.ebuild:
  Version bump wrt #314609 by Tim Harder.

*abcde-2.3.99.7_p235-r3 (28 Jan 2010)

  28 Jan 2010; Steve Dibb <beandog@gentoo.org> +files/m4a-tagging.patch,
  -abcde-2.3.99.7_p235-r2.ebuild, +abcde-2.3.99.7_p235-r3.ebuild:
  Fix m4a tagging, bug 292315

  25 Jul 2009; Samuli Suominen <ssuominen@gentoo.org>
  abcde-2.3.99.7_p235.ebuild, abcde-2.3.99.7_p235-r2.ebuild:
  Remove mppenc from deps since there is no such binary in Musepack SV8.

  10 Jan 2009; Steve Dibb <beandog@gentoo.org> abcde-2.3.0.ebuild,
  abcde-2.3.3.ebuild, abcde-2.3.3-r1.ebuild, abcde-2.3.99.7_p235.ebuild,
  abcde-2.3.99.7_p235-r2.ebuild:
  Update homepage (bug 253592), mirror files on gentoo, quote variables

*abcde-2.3.99.7_p235-r2 (14 Apr 2008)

  14 Apr 2008; Steve Dibb <beandog@gentoo.org>
  -abcde-2.3.99.7_p235-r1.ebuild, +abcde-2.3.99.7_p235-r2.ebuild:
  Add normalize use flag, bug 207420
