@@ -1,6 +1,6 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/abcde/Attic/abcde-2.4.2-r1.ebuild,v 1.1 2010/07/23 19:38:39 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/abcde/Attic/abcde-2.4.2-r1.ebuild,v 1.2 2011/12/16 18:14:49 ago Exp $
 
 EAPI=2
 inherit eutils
@@ -11,7 +11,7 @@ SRC_URI="http://abcde.googlecode.com/files/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~ppc64 ~sparc ~x86"
+KEYWORDS="amd64 ~ppc ~ppc64 ~sparc ~x86"
 IUSE="aac cdparanoia flac id3 lame normalize replaygain speex vorbis"
 
 RDEPEND="media-sound/cd-discid
